added the basis for the aboutme and contact me sections

--- a/index.html
+++ b/index.html
@@ -23,32 +23,37 @@
         </ul>
     </header>
     </article>
-    <section id="myWorks" >
-        <article id="showcase">
-            <h1>Work1</h1>
-            <p>Description of work</p>
-        </article>
-        <article class="secondary">
-            <h1>Work1</h1>
-            <p>Description of work</p>
-        </article>
-        <article class="secondary">
-            <h1>Work1</h1>
-            <p>Description of work</p>
-        </article>
-        <article class="secondary">
-            <h1>Work1</h1>
-            <p>Description of work</p>
-        </article>
-        <article class="secondary">
-            <h1>Work1</h1>
-            <p>Description of work</p>
-        </article>
-    </section class="secondary">
+    <section id="myWorks">
+        <section>
+            <article id="showcase">
+                <h1>Work1</h1>
+                <p>Description of work</p>
+            </article>
+        </section>
+        <section>
+            <article class="secondary">
+                <h1>Work1</h1>
+                <p>Description of work</p>
+            </article>
+            <article class="secondary">
+                <h1>Work1</h1>
+                <p>Description of work</p>
+            </article>
+            <article class="secondary">
+                <h1>Work1</h1>
+                <p>Description of work</p>
+            </article>
+            <article class="secondary">
+                <h1>Work1</h1>
+                <p>Description of work</p>
+            </article>
+        </section>
+    </section>
     <section id="aboutMe">
         <H2>About Me!</H2>
         <p> I am new to coding, this is placeholder text</p>
     </section>
+
     <footer>
         <section id="contactMe">
             <H2>Contact Me!</H2>
