made layout more presentable, added color and filled in readMe!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio!</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -16,45 +16,59 @@
             <img src="assets/images/FrostyRoar.jpg" alt="ScreamingCatJPG">
         </section>
         <ul>
-            <li><a href="#">About me</a></li>
-            <li><a href="#"></a>My Work</li>
-            <li><a href="#"></a>Contact Me</li>
-            <li><a href="#"></a>Resume</li>
+            <li><a href="#aboutMe">About me</a></li>
+            <li><a href="#myWork">My Works</a></li>
+            <li><a href="#contactMe">Contact Me</a></li>
+            <li><a href="https://docs.google.com/document/d/1U-u-7lvJV9NNst0xgqo1W6aY7QVp_nwobavPicPhk2k/edit">Resume</a></li>
         </ul>
     </header>
     </article>
     <section id="myWorks">
         <section>
             <article id="showcase">
-                <h1>Work1</h1>
-                <p>Description of work</p>
+                <h1>Refactoring Code</h1>
+                <a href="https://ccoff1798.github.io/RefactoringHTML/">
+                    <img id = "image1" src="./assets/images/Webstie Screenshot.png" alt="first project Screenshot">
+                </a>
+                <p>This is one of our first projects where I had to refactor the code into semantic HTML and make the code more readable. Click the photo to visit deployed site</p>
             </article>
         </section>
         <section>
             <article class="secondary">
-                <h1>Work1</h1>
-                <p>Description of work</p>
+                <h1>Photos</h1>
+                <a>
+                    <img src="assets/images/FrostyRoar.jpg" alt="KittyGuy">
+                </a>
+                <p>These are placeholder images for the rest of my yet to be completed works</p>
             </article>
             <article class="secondary">
-                <h1>Work1</h1>
-                <p>Description of work</p>
+                <h1>Of</h1>
+                <a>
+                    <img src="assets/images/FrostyRoar.jpg" alt="KittyGuy">
+                </a>
+                <p>These are placeholder images for the rest of my yet to be completed works</p>
             </article>
             <article class="secondary">
-                <h1>Work1</h1>
-                <p>Description of work</p>
+                <h1>My</h1>
+                <a>
+                    <img src="assets/images/FrostyRoar.jpg" alt="KittyGuy">
+                </a>
+                <p>These are placeholder images for the rest of my yet to be completed works</p>
             </article>
             <article class="secondary">
-                <h1>Work1</h1>
-                <p>Description of work</p>
+                <h1>Cat!</h1>
+                <a>
+                    <img src="assets/images/FrostyRoar.jpg" alt="KittyGuy">
+                </a>
+                <p>These are placeholder images for the rest of my yet to be completed works</p>
             </article>
         </section>
     </section>
-    <section id="aboutMe">
-        <H2>About Me!</H2>
-        <p> I am new to coding, this is placeholder text</p>
-    </section>
-
     <footer>
+        <section id="aboutMe">
+            <H2>About Me!</H2>
+            <p> I am new to coding, just getting started! I was born in Austin Texas but recently moved up for family reasons, which caused me to drop out of college. I have been in sales for 5 years and am looking into coding to broaden my horizons!</p>
+        </section>
         <section id="contactMe">
             <H2>Contact Me!</H2>
             <ul>
